--- a/PythonCheatSheet.ipynb
+++ b/PythonCheatSheet.ipynb
@@ -45,9 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your student number: 125\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome student 125\n"
+     ]
+    }
+   ],
    "source": [
     "student_number = input(\"Enter your student number:\")\n",
     "if student_number != 0:\n",
@@ -68,9 +83,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n",
+      "# is not a comment in this case\n"
+     ]
+    }
+   ],
    "source": [
     "# This is code to print hello world!\n",
     "\n",
@@ -115,9 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of int numbers: 13 and number format is <class 'int'>\n",
+      "Sum of int and 7.3 and number format is <class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Number examples\n",
     "a = 5 + 8\n",
