--- a/Project/Amazon_Reviews-Student.ipynb
+++ b/Project/Amazon_Reviews-Student.ipynb
@@ -2458,9 +2458,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_mxnet_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_mxnet_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2472,7 +2472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
